--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://mysql:3306/missz_common
+spring.datasource.username=missz_cmn
+spring.datasource.password=zV477hrWoU735EkD
+spring.datasource.url=jdbc:mysql://127.0.0.1:33060/missz_common
