--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,9 @@
 
 spring.datasource.username=missz_cmn
 spring.datasource.password=zV477hrWoU735EkD
-spring.datasource.url=jdbc:mysql://bit.missz.top:33060/missz_common
+spring.datasource.url=jdbc:mariadb://bit.missz.top:33060/missz_common
+
+##是否启动,默认开启
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.table=missz_schema_history
