--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.profiles.active=dev
 
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 mybatis.type-aliases-package=top.missz.repository
 mybatis.mapper-locations=classpath:mapper/*.xml
 
