--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.username=missz_cmn
 spring.datasource.password=zV477hrWoU735EkD
-spring.datasource.url=jdbc:mariadb://127.0.0.1:33060/missz_common
+spring.datasource.url=jdbc:mariadb://missz.cf970gyq9p7j.ap-northeast-1.rds.amazonaws.com:3306/missz_common
 
 ##是否启动,默认开启
 spring.flyway.enabled=true
