--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>flyway-mysql</artifactId>
             <version>9.15.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>3.9.15</version>
+        </dependency>
     </dependencies>
 
     <build>
